--- a/ttt.html
+++ b/ttt.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link  rel="shortcut icon" type="image"  href="./css.png">
+    <link rel="stylesheet" href="./styles.css">
     <title>workshop</title>
   
   </head>
